aula-04/security.tf
resource "aws_security_group" "api" {
  name        = "technova-api-sg"
  description = "Security Group da API TechNova"
  vpc_id      = aws_vpc.technova.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Node.js API"
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Todo trafego de saida"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(
    local.common_tags,
    {
      Name = "technova-api-sg"
    }
  )
}
resource "aws_security_group" "db" {
  name        = "technova-db-sg"
  description = "Security Group do banco de dados futuro"
  vpc_id      = aws_vpc.technova.id

  ingress {
    description = "PostgreSQL VPC"
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  egress {
    description = "Todo trafego de saida"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(
    local.common_tags,
    {
      Name = "technova-db-sg"
    }
  )
}
